kubernetes-manifests/nats/overlays/supercluster/us-west-2/gateway-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-gateway-0
  namespace: nats
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/component: gateway
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-018d72a99fda3f054,subnet-0ade434b738313d7e,subnet-0143fcc56b3ee49db,subnet-024db9cb02ba3c53f
    service.beta.kubernetes.io/aws-load-balancer-attributes: load_balancing.cross_zone.enabled=true
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: HTTP
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "8222"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /healthz
spec:
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Local
  loadBalancerSourceRanges: [0.0.0.0/0]
  selector: {statefulset.kubernetes.io/pod-name: nats-0}
  ports:
  - {name: gateway, protocol: TCP, port: 7222, targetPort: gateway}
---
apiVersion: v1
kind: Service
metadata:
  name: nats-gateway-1
  namespace: nats
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/component: gateway
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-018d72a99fda3f054,subnet-0ade434b738313d7e,subnet-0143fcc56b3ee49db,subnet-024db9cb02ba3c53f
    service.beta.kubernetes.io/aws-load-balancer-attributes: load_balancing.cross_zone.enabled=true
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: HTTP
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "8222"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /healthz
spec:
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Local
  loadBalancerSourceRanges: [0.0.0.0/0]
  selector: {statefulset.kubernetes.io/pod-name: nats-1}
  ports:
  - {name: gateway, protocol: TCP, port: 7222, targetPort: gateway}
---
apiVersion: v1
kind: Service
metadata:
  name: nats-gateway-2
  namespace: nats
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/component: gateway
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-018d72a99fda3f054,subnet-0ade434b738313d7e,subnet-0143fcc56b3ee49db,subnet-024db9cb02ba3c53f
    service.beta.kubernetes.io/aws-load-balancer-attributes: load_balancing.cross_zone.enabled=true
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: HTTP
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "8222"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /healthz
spec:
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Local
  loadBalancerSourceRanges: [0.0.0.0/0]
  selector: {statefulset.kubernetes.io/pod-name: nats-2}
  ports:
  - {name: gateway, protocol: TCP, port: 7222, targetPort: gateway}
